Fix menu icon not showing up on mobile

--- a/assets/scss/_colors.scss
+++ b/assets/scss/_colors.scss
@@ -46,6 +46,7 @@ $topbar-link-color: #645E54;
 // $topbar-link-bg-active: $primary-color;
 // $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
 // $topbar-link-font-family: $body-font-family;
+$topbar-menu-icon-color: $black;
 
 //
 // HERO
